--- a/processing-service/package.json
+++ b/processing-service/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "router-service",
+  "name": "processing-service",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,9 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "ioredis": "^5.7.0",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.16.3",
+    "redis": "^5.8.0"
   }
 }
