--- a/analytics-service/package.json
+++ b/analytics-service/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "ingestion-service",
+  "name": "analytics-service",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@huggingface/inference": "^4.7.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "redis": "^5.8.1"
   }
 }
