--- a/processing-service/package.json
+++ b/processing-service/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "ioredis": "^5.7.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
     "redis": "^5.8.0"
   }
 }
